CREATE TABLE IF NOT EXISTS options (
  id INT NOT NULL AUTO_INCREMENT,
  label TEXT NOT NULL,
  type TEXT NOT NULL,

  PRIMARY KEY (id)
);
